--- a/ghi/public/index.html
+++ b/ghi/public/index.html
@@ -13,6 +13,8 @@
     -->
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<link href="../dist/output.css" rel="stylesheet" />
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.css" rel="stylesheet" />
+
 		<!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -27,6 +29,8 @@
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
+
 		<!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
