--- a/ghi/public/index.html
+++ b/ghi/public/index.html
@@ -28,9 +28,10 @@
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
-		<div id="root"></div>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
-
+		<div id="root">
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+		</div>
 		<!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
