--- a/ghi/public/index.html
+++ b/ghi/public/index.html
@@ -5,7 +5,7 @@
 		<link rel="icon" href="%PUBLIC_URL%/logo-color.svg" type="image/svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
-		<meta name="description" content="Vibe Check web site created using create-react-app" />
+		<meta name="description" content="Vibe Check | CRA React - Redux - FastAPI - Tailwind" />
 		<!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
